[package]
name = "arc-atomic"
version = "0.1.0"
edition = "2021"

description = "Provides an atomic pointer to an `Arc`"
readme = "readme.md"
documentation = "https://docs.rs/arc-atomic"
repository = "https://github.com/colinjfw/arc-atomic"
license = "MIT"
authors = ["Colin Walker <me@colinjfw.com>"]
keywords = ["arc"]
categories = ["data-structures"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }
